Done all the changes for the home page now the pending work is contact info and footer

--- a/test.html
+++ b/test.html
@@ -228,7 +228,7 @@
       <div class="card__container">
         <!--First-->
          <article class="card__article">
-            <img src="images/CoolerRentalCompany.png" alt="image" class="card__img">
+            <img src="images/MistFanRentalCompany.png" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Vancouver Mountains, Canada</span>
@@ -238,7 +238,7 @@
          </article>
          <!--Second-->
           <article class="card__article">
-            <img src="images/MistFanRentalCompany.png" alt="image" class="card__img">
+            <img src="images/CoolerRentalCompany.png" alt="image" class="card__img">
 
             <div class="card__data">
               <span class="card__description">Poon Hill, Nepal</span>
@@ -260,14 +260,14 @@
     </div>
 
     <!--Product Catagory circle 1-->
-    <section class="product-cat-section-one mt-5">
+    <section class="product-cat-section-one mb-5">
       <div class="product-cat-content-one">
         <h1>Event Catagory</h1>
       </div>
     </section>
 
     <!--Image with Cards-->
-    <section class="d-flex justify-content-center">
+    <section class="d-flex justify-content-center mb-5">
       <!--First Image card starts-->
       <div class=" card imagecard mt-5">
         <div class="imgbox">
@@ -306,7 +306,7 @@
       <div class="card imagecard mt-5">
         <div class="imgbox">
           <img class="card-img"
-            src="images/NorEventImages.jpg"
+            src="images/EventImages.jpg"
           />
         </div>
 
@@ -335,27 +335,57 @@
         </div>
       </div>-->
     </section>
+  
+    <!-- Down arrow-->
+    <Section>
+        <div class="d-flex justify-content-center p-5" >
+          <span class="display-2">
+            <i class="fa-solid fa-angles-down fa-beat fa-xl" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
+          </span>
+        </div>
+    </Section>
+  
+    <!-- Let us reach you 2 -->
+    <section>
+        <div class="container">
+          <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
+            Operating <span class="display-4">Since 2023</span> , <span class="display-3 fw-bolder">The Rental Company</span> has built an excellent reputation by <br>continuously delivering their customers;
+          </h1>
+        </div>
+    </section>
+  
+    <!-- Up arrow-->
+  
+    <Section>
+        <div class="d-flex justify-content-center p-5" >
+          <span class="display-2">
+            <i class="fa-solid fa-angles-up fa-beat fa-xl" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
+          </span>
+        </div>
+    </Section>
         
     <!-- Let us reach you 3 -->
     <section>
       <div class="container">
-        <h1 class="mt-3 mb-3 mb-md-0 text-center">
-          <span class="text-danger fw-bold">Why Choose Us?</span> , <span class="text-warning display-2">ANS NETWORK SERVICES</span> has many valid reasons why you should choose us to take care of your valuable device
+        <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
+          <span class="details-text">Why Choose Us?</span> , <span class="display-3 fw-bolder">The Rental Company</span> has many valid reasons why you should choose us to take care of your valuable device
         </h1>
       </div>
     </section>
+
+    <!--Why choose us grid-->
 
     <section id="learn" class="p-5">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-xl p-5" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-              <div class="row">
+              <div class="row details-text">
                   <!--col1-->
-                    <div class="card mb-3 bg-info rounded-lg">
+                    <div class="card mb-3 bg-card-info rounded-lg">
                       <div class="card-body text-center">
                         <div class="h1 mb-3">
                           <!--<i class="bi bi-people"></i>-->
-                          <i class="fa-solid fa-user-tie fa-fade" style="color: #212529;"></i>
+                          <i class="fa-solid fa-user-tie fa-fade" style="color: #ed2f91;"></i>
                         </div>
                         <h3 class="card-title display-6 mb-3">
                           Experienced Professionals
@@ -366,11 +396,11 @@
                       </div>
                     </div>
                   <!--col2-->
-                    <div class="card mb-3 bg-info rounded-lg">
+                    <div class="card mb-3 bg-card-info rounded-lg">
                       <div class="card-body text-center">
                         <div class="h1 mb-3">
                           <!--<i class="bi bi-boxes"></i>-->
-                          <i class="fa-solid fa-award fa-fade" style="color: #212529;"></i>
+                          <i class="fa-solid fa-award fa-fade" style="color: #ed2f91;"></i>
                         </div>
                         <h3 class="card-title mb-3 display-6">
                           Excellent Reputation
@@ -383,11 +413,11 @@
               </div>
               <div class="row">
                   <!--col3-->
-                    <div class="card mb-3 bg-info rounded-lg">
+                    <div class="card mb-3 bg-card-info rounded-lg">
                       <div class="card-body text-center">
                         <div class="h1 mb-3">
                           <!--<i class="bi bi-cookie"></i>-->
-                          <i class="fa-solid fa-handshake fa-fade" style="color: #212529;"></i>
+                          <i class="fa-solid fa-handshake fa-fade" style="color: #ed2f91;"></i>
                         </div>
                         <h3 class="card-title mb-3 display-6">
                           Friendly Service
@@ -398,11 +428,11 @@
                       </div>
                      </div>
                   <!--col4-->
-                    <div class="card mb-3 bg-info rounded-lg">
+                    <div class="card mb-3 bg-card-info rounded-lg">
                       <div class="card-body text-center">
                         <div class="h1 mb-3">
                           <!--<i class="bi bi-code-slash"></i>-->
-                          <i class="fa-solid fa-person-chalkboard fa-fade" style="color: #212529;"></i>
+                          <i class="fa-solid fa-person-chalkboard fa-fade" style="color: #ed2f91;"></i>
                         </div>
                         <h3 class="card-title mb-3 display-6">
                           Expert Technical Skills
