Added code for footer and css for the same

--- a/test.html
+++ b/test.html
@@ -40,60 +40,27 @@
 
             <!-- Dropdown -->
             <li class="nav-item dropdown dropdown-mega position-static">
-              <a href="#services" class="nav-link  dropdown-toggle" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">Services</a>
+              <a href="#services" class="nav-link  dropdown-toggle" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">Event Catagory</a>
               <!-- Dropdown Menu -->
               <div class="dropdown-menu scrollable-menu" aria-labelledby="navbarDropdown">
                 <div class="mega-content px-md-4">
                   <div class="container">
                     <div class="row">
                       <div class="col-lg-3 col-sm-6 py-4 px-xl-5 px-4">
-                        <h5>Managed IT Services
+                        <h5>Wedding
                           <i 
                               class="fa-solid fa-caret-right fa-fade" style="color: #212529; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;">
                             </i>
                         </h5>
                         <div class="list-group">
-                          <a class="list-group-item icon-link icon-link-hover" href="/managedITservices/itsupportnsolutionservice.html">IT Support & Solution Services
+                          <a class="list-group-item icon-link icon-link-hover" href="/managedITservices/itsupportnsolutionservice.html">OutDoor Weeding
                           </a>
-                          <a class="list-group-item" href="/managedITservices/servermanagmentservice.html">Server Management Services
+                          <a class="list-group-item" href="/managedITservices/servermanagmentservice.html">Indoor Wedding
                           </a>
-                          <a class="list-group-item" href="/managedITservices/vmvareservermaintance.html">Vmware Virtual Server Environment
+                          <a class="list-group-item" href="/managedITservices/vmvareservermaintance.html">Destination Wedding
                           </a>
-                          <a class="list-group-item" href="/managedITservices/desktopandlaptopservice.html">Desktop & Laptop Services
+                          <a class="list-group-item" href="/managedITservices/desktopandlaptopservice.html">Lawn Wedding
                           </a>
-                        </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 py-4 px-xl-5 px-4">
-                        <h5>IT Infrastructure Management Services</h5>
-                        <div class="list-group">
-                          <a class="list-group-item" href="/IT infrastructuremanagementservices/usersupport.html">User Support</a>
-                          <a class="list-group-item" href="/managedITservices/servermanagmentservice.html">Server Management Services</a>
-                          <a class="list-group-item" href="/IT infrastructuremanagementservices/remotesupportservice.html">Remote Support Services</a>
-                          <a class="list-group-item" href="/IT infrastructuremanagementservices/clodservice.html">Cloud Services</a>
-                        </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 py-4 px-xl-5 px-4">
-                        <h5>Networking Services</h5>
-                        <div class="list-group">
-                          <a class="list-group-item" href="/networkservices/rackdressing.html">Rack Dressing</a>
-                          <a class="list-group-item" href="/networkservices/networkstructcable.html">Network Structural Cabling</a>
-                          <a class="list-group-item" href="/networkservices/sysintegratorservice.html">System Integrator Computer Networking Services</a>
-                          <a class="list-group-item" href="/networkservices/cctvsecuritysys.html">CCTV Security System</a>
-                        </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 py-4 px-xl-5 px-4">
-                        <h5>Software Management Services</h5>
-                        <div class="list-group">
-                          <a class="list-group-item" href="/softwaremanagmentservice/ERPServices.html">ERP Services</a>
-                          <a class="list-group-item" href="/softwaremanagmentservice/ERPConsultingSoftwareSer.html">ERP Consulting & Software Services</a>
-                          <a class="list-group-item" href="/softwaremanagmentservice/ComputerAMCServices.html">Computer AMC Services</a>
-                        </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6 py-4 px-xl-5 px-4">
-                        <h5>Server Maintenance Services</h5>
-                        <div class="list-group">
-                          <a class="list-group-item" href="/servermaintanceservice/serverinstallationservice.html">Server Installation Service</a>
-                          <a class="list-group-item" href="/servermaintanceservice/servermaintance.html">Server Implementation Services</a>
                         </div>
                       </div>
                     </div>
@@ -590,16 +557,50 @@
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="p-5 bg-dark text-white text-center position-relative">
-      <div class="container">
-        <p class="lead">Copyright &copy; 2023 ANS Networks</p>
+    <!--Footer 2-->
 
-        <a href="#" class="position-absolute bottom-0 end-0 p-5">
-          <i class="bi bi-arrow-up-circle h1"></i>
-        </a>
+    <footer class="footer position-relative">
+      <div class="container">
+        <div class="row">
+          <div class="footer-col">
+            <ul>
+              <li><img src="/images/The Rental CompanyLogo With Name.png" class="footer-logo"></a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>company</h4>
+            <ul>
+              <li><a href="#">about us</a></li>
+              <li><a href="#">our services</a></li>
+              <li><a href="#">privacy policy</a></li>
+              <li><a href="#">affiliate program</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>get help</h4>
+            <ul>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">shipping</a></li>
+              <li><a href="#">returns</a></li>
+              <li><a href="#">order status</a></li>
+              <li><a href="#">payment options</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>follow us</h4>
+            <div class="social-links">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
-    </footer>
+      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h1" style="color:#ed2f91; --fa-animation-duration: 5s;"></i>
+      </a>
+   </footer>
 
     <!-- Whatsapp Link -->
 
