Deleted one unwanted page and added new drop down menu

--- a/test.html
+++ b/test.html
@@ -53,16 +53,35 @@
                             </i>
                         </h5>
                         <div class="list-group">
-                          <a class="list-group-item icon-link icon-link-hover" href="/managedITservices/itsupportnsolutionservice.html">OutDoor Weeding
+                          <a class="list-group-item" href="#">OutDoor Weeding
                           </a>
-                          <a class="list-group-item" href="/managedITservices/servermanagmentservice.html">Indoor Wedding
+                          <a class="list-group-item" href="#">Indoor Wedding
                           </a>
-                          <a class="list-group-item" href="/managedITservices/vmvareservermaintance.html">Destination Wedding
+                          <a class="list-group-item" href="#">Destination Wedding
                           </a>
-                          <a class="list-group-item" href="/managedITservices/desktopandlaptopservice.html">Lawn Wedding
+                          <a class="list-group-item" href="#">Lawn Wedding
                           </a>
                         </div>
                       </div>
+
+                      <div class="col-lg-3 col-sm-6 py-4 px-xl-5 px-4">
+                        <h5>Corporate Events
+                          <i 
+                              class="fa-solid fa-caret-right fa-fade" style="color: #212529; --fa-animation-duration: 4s; --fa-bounce-rebound: 0;">
+                            </i>
+                        </h5>
+                        <div class="list-group">
+                          <a class="list-group-item" href="#">OutDoor Events
+                          </a>
+                          <a class="list-group-item" href="#">Indoor Events
+                          </a>
+                          <a class="list-group-item" href="#">Destination Award Events
+                          </a>
+                          <a class="list-group-item" href="#">Party Events
+                          </a>
+                        </div>
+                      </div>
+
                     </div>
                   </div>
                 </div>
