--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="/aboutus.html" class="nav-link --maintext-color" aria-current="page">About Us</a>
+              <a href="#" class="nav-link --maintext-color" aria-current="page">About Us</a>
             </li>
 
             <!-- Dropdown -->
@@ -89,7 +89,7 @@
                   
             </li>
             <li class="nav-item">
-              <a href="/contactus.html" class="nav-link">Contact Us</a>
+              <a href="#" class="nav-link">Contact Us</a>
             </li>
           </ul>
         </div>
