Added AOS Animations to the main page

--- a/test.html
+++ b/test.html
@@ -97,7 +97,7 @@
     </nav>
 
     <!--ShowCase-->
-    <section class="text-body p-5 p-lg-0 pt-lg-5 text-sm-start mb-5">
+    <section class="text-body p-5 p-lg-0 pt-lg-5 text-sm-start mb-5" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
       <div class="container">
         <div class="welcome-text d-sm-flex align-items-center justify-content-between">
           <div data-aos="fade-up">
@@ -165,7 +165,7 @@
     <!--Our Vision-->
 
     <section class="product-cat-section block block--dark block--skewed-left">
-      <div class="product-cat-content mt-5">
+      <div class="product-cat-content mt-5" data-aos="zoom-in-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <h1 class="text-center text-light">Our Vision</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum amet,</p>
         </header>
@@ -183,7 +183,7 @@
 
     <!-- Let us reach you 2 -->
     <section>
-      <div class="container">
+      <div class="container" data-aos="zoom-out-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
           Operating <span class="display-4">Since 2023</span> , <span class="display-3 fw-bolder">The Rental Company</span> has built an excellent reputation by <br>continuously delivering their customers;
         </h1>
@@ -202,7 +202,7 @@
 
     <!--Product Catagory circle-->
     <section class="product-cat-section mt-5">
-      <div class="product-cat-content">
+      <div class="product-cat-content" data-aos="zoom-in-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <h1>Product Catlogue</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit doloremque minima,</p>
 
@@ -210,7 +210,7 @@
     </section>
 
     <!--Images with card second option-->
-    <div class="img-card-container">
+    <div class="img-card-container" data-aos="fade-up-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
       <div class="card__container">
         <!--First-->
          <article class="card__article">
@@ -247,13 +247,13 @@
 
     <!--Product Catagory circle 1-->
     <section class="product-cat-section-one mb-5">
-      <div class="product-cat-content-one">
+      <div class="product-cat-content-one" data-aos="zoom-in-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <h1>Event Catagory</h1>
       </div>
     </section>
 
     <!--Image with Cards-->
-    <section class="d-flex justify-content-center mb-5">
+    <section class="d-flex justify-content-center mb-5" data-aos="fade-up-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
       <!--First Image card starts-->
       <div class=" card imagecard mt-5">
         <div class="imgbox">
@@ -334,7 +334,7 @@
     <!-- Let us reach you 2 -->
     <section>
         <div class="container">
-          <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
+          <h1 class="details-text mt-3 mb-3 mb-md-0 text-center" data-aos="fade-down-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
             Operating <span class="display-4">Since 2023</span> , <span class="display-3 fw-bolder">The Rental Company</span> has built an excellent reputation by <br>continuously delivering their customers;
           </h1>
         </div>
@@ -353,7 +353,7 @@
     <!-- Let us reach you 3 -->
     <section>
       <div class="container">
-        <h1 class="details-text mt-3 mb-3 mb-md-0 text-center">
+        <h1 class="details-text mt-3 mb-3 mb-md-0 text-center" data-aos="fade-down-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
           <span class="details-text">Why Choose Us?</span> , <span class="display-3 fw-bolder">The Rental Company</span> has many valid reasons why you should choose us to take care of your valuable device
         </h1>
       </div>
@@ -534,7 +534,7 @@
     <!--Contact-->
 
     <section class="product-cat-section block block--dark block--skewed-right">
-      <div class="product-cat-content mt-5">
+      <div class="product-cat-content mt-5" data-aos="zoom-in-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <h1 class="text-center text-light">Our Vision</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum amet,</p>
         </header>
