Changes done on the first card as per the product names

--- a/test.html
+++ b/test.html
@@ -217,9 +217,8 @@
             <img src="images/MistFanRentalCompany.png" alt="image" class="card__img">
 
             <div class="card__data">
-               <span class="card__description">Vancouver Mountains, Canada</span>
-               <h2 class="card__title">The Great Path</h2>
-               <a href="#" class="card__button">Read More</a>
+               <span class="card__description">First</span>
+               <h2 class="card__title">Mist Fans</h2>
             </div>
          </article>
          <!--Second-->
@@ -227,9 +226,8 @@
             <img src="images/CoolerRentalCompany.png" alt="image" class="card__img">
 
             <div class="card__data">
-              <span class="card__description">Poon Hill, Nepal</span>
-              <h2 class="card__title">Starry Night</h2>
-              <a href="#" class="card__button">Read More</a>
+              <span class="card__description">Second</span>
+              <h2 class="card__title">Cooler</h2>
             </div>
           </article>
           <!--Third-->
@@ -237,9 +235,8 @@
             <img src="images/NormalFanRentalCompany.png" alt="image" class="card__img">
 
             <div class="card__data">
-              <span class="card__description">Bojcin Forest, Serbia</span>
-              <h2 class="card__title">Path Of Peace</h2>
-              <a href="#" class="card__button">Read More</a>
+              <span class="card__description">Third</span>
+              <h2 class="card__title">Fans</h2>
             </div>
           </article>
         </div>
