Changes done deleted few files and made changes in foooter alignment and event catogory cards

--- a/test.html
+++ b/test.html
@@ -260,7 +260,7 @@
         </div>
 
         <div class="image-box-content">
-          <h2>Keep Smiling</h2>
+          <h2>Weeding Events</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
           </p>
@@ -277,7 +277,7 @@
         </div>
 
         <div class="image-box-content">
-          <h2>Keep Smiling</h2>
+          <h2>Corporate Events</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
           </p>
@@ -294,7 +294,7 @@
         </div>
 
         <div class="image-box-content">
-          <h2>Keep Smiling</h2>
+          <h2>Shootings</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
           </p>
@@ -570,7 +570,7 @@
 
     <footer class="footer position-relative">
       <div class="container">
-        <div class="row">
+        <div class="footer-row row">
           <div class="footer-col">
             <ul>
               <li><img src="/images/The Rental CompanyLogo With Name.png" class="footer-logo"></a></li>
@@ -581,18 +581,12 @@
             <ul>
               <li><a href="#">about us</a></li>
               <li><a href="#">our services</a></li>
-              <li><a href="#">privacy policy</a></li>
-              <li><a href="#">affiliate program</a></li>
             </ul>
           </div>
           <div class="footer-col">
             <h4>get help</h4>
             <ul>
               <li><a href="#">FAQ</a></li>
-              <li><a href="#">shipping</a></li>
-              <li><a href="#">returns</a></li>
-              <li><a href="#">order status</a></li>
-              <li><a href="#">payment options</a></li>
             </ul>
           </div>
           <div class="footer-col">
